k8s/broker-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: nginxsvc-ingress
  # name: broker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: broker-book
    http:
      paths:
      - backend:
          serviceName: nginx-svc
          servicePort: 80
        path: /broker/last-price
  # - host: broker-book
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: nginx-svc
  #         servicePort: 80
  #       path: /broker/last-price
